~/dev/py/merkletree/CHANGES

2.1.0
    2013-06-25
        * added firstLineRE_1 and _3                                SLOC 1459
2.0.1
    2013-06-24
        * fixed two uses of self. in static method                  SLOC 1453
    2013-06-22
        * fixed error in file name pattern ('+','$' not allowed)    SLOC 1450
2.0.0
    2013-06-10
        * picked up usingSHA1 in merkleize, added countem           SLOC 1450
    2013-06-07
        * merged in what used to be merkle3, so all sha3 code       SLOC 1261
1.1.1
    2012-06-06
        * deleted netDistrib.conf, which was not under version      SLOC  864
            control, because it did not include new machines

1.1.0
    20120423 jdd
        * added merkletree/ package
        * moved version number and date to __init__.py there
        * renamed VERSION, VERSION_DATE to __version__, __version_date__
            in various places
        * changed setup.py to read __version__ from there (not import)
        * added MANIFEST.in, dropped manually maintained MANIFEST
        * dropped local netDistrib script
        * merged what is now merklelib.py into merkletree/__init__.py

1.0.4 20111103 jdd * changed MerkleTree.createFromFileSystem() to follow 
                       symlinks at the file level but not the directory level
                       (S_ISREG(mode) replaced by os.path.isfile()).  This
                       allows us to merkleize cv.dixons.org.

1.0.3 20111101 jdd * corrected import statement in merkleize 
                   * fixed bug in MerkleTree.createFromStringArray(), adding
                       testXLatticeBug() to testMerkleTree and dat.xlattice.org
                       data set

1.0.2 20111031 jdd * added 'testGrayBoxesBug' test
                   * corrected another bug in MerkleTree.createFromStringArray,
                       which caused errors in handling subtree indentation

1.0.1 20111027 jdd * fixed bug in MerkleTree.toString() tests (misinterpreted