@@ -3,6 +3,12 @@
 This package depends upon pysha3-0.2.1, which should be in /usr/local/src
 -------------------------------------------------------------------------
 
+2014-06-26
+    * FIX: firstLineRE_{1,3}() should be MerkleTree function, not       * DONE
+        MerkleDoc                                                       * DONE
+    * FIX: MerkleTree.parseFirstLine is invoking the compiled regex     * DONE
+        as a pattern (around line 523)                                  * DONE
+
 2014-06-25
     * make FIRST_LINE_RE_1 and _3 public                                * DONE
     * these should be properties and so not assignable                  * DONE
@@ -13,7 +19,7 @@ This package depends upon pysha3-0.2.1, which should be in /usr/local/src
 
     * NEED TO REVIEW: any use of self. in a static method is an error
     * another BUG in merkleTree.createFromFile, line 683                * FIXED
-    * add tests of createFromFile() to testMerkleTree.py
+    * add tests of createFromFile() to testMerkleTree.py                
 
 2014-06-21
     * review code, dropping debug statements unless warranted
